[project]
name = "e-commerce-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "stripe>=14.0.1",
]
